--- a/build.config
+++ b/build.config
@@ -1,15 +1,9 @@
 {
   "defaultConfig":{
     "api":"CoreEngine",
-    "buildType":"develop",
-    "libraryDir":"libs/"
+    "buildType":"develop"
   },
-  "buildDirs":[
-    {
-      "dir":"dev/",
-      "targetSource":"main.js"
-    }
-  ],
+  "buildDirs":[],
   "compile":[
     {
       "path":"main.js",
@@ -20,14 +14,7 @@
       "sourceType":"launcher"
     }
   ],
-  "resources":[
-    {
-      "path":"res/",
-      "resourceType":"resource"
-    },
-    {
-      "path":"gui/",
-      "resourceType":"gui"
-    }
-  ]
+  "resources":[],
+  "nativeDirs":[],
+  "javaDirs":[]
 }
