--- a/build.config
+++ b/build.config
@@ -3,7 +3,12 @@
     "api":"CoreEngine",
     "buildType":"develop"
   },
-  "buildDirs":[],
+  "buildDirs":[
+    {
+      "dir":"dev/",
+      "targetSource":"main.js"
+    }
+  ],
   "compile":[
     {
       "path":"main.js",
