--- a/.gitignore
+++ b/.gitignore
@@ -103,5 +103,12 @@ dist
 # TernJS port file
 .tern-port
 
+# Build files
+main.js
+.dex/
+
+# Minimap config
+minimap.txt
+
 # Dropbox sync
 .ttxfolder
