Moved everything to internal resource/

--- a/build.config
+++ b/build.config
@@ -1,7 +1,7 @@
 {
   "defaultConfig":{
-    "api":"CoreEngine",
-    "buildType":"develop"
+    "buildType":"develop",
+    "api":"CoreEngine"
   },
   "buildDirs":[
     {
@@ -11,15 +11,15 @@
   ],
   "compile":[
     {
-      "path":"main.js",
-      "sourceType":"mod"
-    },
-    {
       "path":"launcher.js",
       "sourceType":"launcher"
+    },
+    {
+      "path":"main.js",
+      "sourceType":"mod"
     }
   ],
   "resources":[],
-  "nativeDirs":[],
-  "javaDirs":[]
+  "javaDirs":[],
+  "nativeDirs":[]
 }
