--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "enabled":true,
   "initialization":{
-    "use_legacy_entities":true,
+    "use_legacy_entities":false,
     "button_size":40
   }
 }
