--- a/build.config
+++ b/build.config
@@ -1,21 +1,22 @@
 {
   "defaultConfig":{
+    "libraryDir":"script/library/",
     "buildType":"develop",
     "api":"CoreEngine"
   },
   "buildDirs":[
     {
-      "dir":"dev/",
-      "targetSource":"main.js"
+      "dir":"script/main/",
+      "targetSource":"script/main.js"
     }
   ],
   "compile":[
     {
-      "path":"launcher.js",
+      "path":"script/launcher.js",
       "sourceType":"launcher"
     },
     {
-      "path":"main.js",
+      "path":"script/main.js",
       "sourceType":"mod"
     }
   ],
