Adaptation config to prototype rewriting

--- a/config.json
+++ b/config.json
@@ -3,5 +3,13 @@
   "initialization":{
     "use_legacy_entities":false,
     "button_size":40
+  },
+  "runtime":{},
+  "indicator":{},
+  "location":{},
+  "stylesheet":{},
+  "performance":{},
+  "development":{
+    "show_process":true
   }
 }
