--- a/config.json
+++ b/config.json
@@ -4,23 +4,10 @@
     "use_legacy_entities":false,
     "button_size":40
   },
-  "runtime":{
-    
-  },
-  "indicator":{
-    "tile":true,
-    "only_surface":false
-  },
-  "location":{
-    
-  },
-  "stylesheet":{
-    
-  },
-  "performance":{
-    
-  },
-  "development":{
-    "show_process":true
-  }
+  "runtime":{},
+  "indicator":{},
+  "location":{},
+  "stylesheet":{},
+  "performance":{},
+  "development":{}
 }
