Improved color correction, height search and minor bugs fixed

--- a/build.config
+++ b/build.config
@@ -7,17 +7,13 @@
   "buildDirs":[
     {
       "dir":"script/main/",
-      "targetSource":"script/main.js"
+      "targetSource":"script/launcher.js"
     }
   ],
   "compile":[
     {
       "path":"script/launcher.js",
       "sourceType":"launcher"
-    },
-    {
-      "path":"script/main.js",
-      "sourceType":"mod"
     }
   ],
   "resources":[],
