--- a/.gitignore
+++ b/.gitignore
@@ -1,63 +1,10 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.logging/
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-.todo/
-
-# Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
-.grunt
-
-# node-waf configuration
-.lock-wscript
-
-# Dependency directories
 node_modules/
 jspm_packages/
-
-# TypeScript v1 declaration files
 typings/
-
-# TypeScript cache
 *.tsbuildinfo
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Dropbox sync
 .ttxfolder
 _gsdata_/
-
-# Environment files
-/script/main.js
+.todo/
+/script/launcher.js
 /config.proto.json
-
-# Minimap sources
-/script/.sources/
-
-# Resources abilities
 .placeholder.ico
-
-# Local development
-/minimap.txt
