Improved research map navigation, hardware acceleration, location in testing stage

--- a/build.config
+++ b/build.config
@@ -7,12 +7,12 @@
   "buildDirs":[
     {
       "dir":"script/main/",
-      "targetSource":"script/launcher.js"
+      "targetSource":"script/script.js"
     }
   ],
   "compile":[
     {
-      "path":"script/launcher.js",
+      "path":"script/script.js",
       "sourceType":"launcher"
     }
   ],
